2019-03-09  Stefan Monnier <monnier@iro.umontreal.ca>
	* bbdb-com.el, bbdb.el: Fix some warnings; plus cosmetic changes

	* bbdb-com.el, bbdb.el: Use #' to quote functions.
	* bbdb-com.el (bbdb-dial): Clarify backslash escaping in regexp.
	(bbdb-mail-aliases): η-reduce.
	(bbdb-mail-aliases): Use abbrev-symbol.
	(bbdb-dial-number): Use bbdb--dial-default.

	* bbdb.el: Move variable aliases before their target's definition.
	(bbdb-merge-records-function, bbdb-dial-function):
	(bbdb-canonicalize-mail-function): Use a non-nil default.
	(bbdb--dial-default): New function.
	(bbdb-init-forms): Use functions rather than "forms".
	(bbdb-initialize): Adjust accordingly.

2018-09-06  Roland Winkler  <winkler@gnu.org>
	Fix support for Wanderlust.
	* lisp/bbdb-mua.el (bbdb-mua-mode-alist): Include mime-view-mode.
	* lisp/bbdb-wl.el (bbdb/wl-header): Use with-current-buffer.

2018-05-02  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-message-header): Use rmail-get-header.
	* lisp/bbdb-rmail.el (bbdb/rmail-header): Remove.

2018-03-30  Roland Winkler  <winkler@gnu.org>
	Unify the handling of new records, new fields and modified fields.

	* bbdb.el (bbdb-check-name): Handle both names and akas.  New
	optional arg warn.
	(bbdb-check-mail): New function.
	(bbdb-register-record): Use bbdb-check-name and bbdb-check-mail.
	New optional arg warn.
	(bbdb-change-record): Fix docstring.

	* bbdb.el (bbdb-record-set-field):
	* bbdb-com.el (bbdb-read-record, bbdb-create-internal):
	Use bbdb-check-name and bbdb-check-mail.

	* bbdb-com.el (bbdb-record-edit-address): Allow arg address be nil
	for new addresses.
	(bbdb-record-edit-phone): Operate only on the phone number that we
	change.
	(bbdb-read-record, bbdb-read-field): Use bbdb-record-edit-phone.
	Always use bbdb-record-set-field.

2018-03-26  Roland Winkler  <winkler@gnu.org>
	* bbdb.el (bbdb-register-record): Don't be fooled by existing
	records.

2018-03-17  Vincent Belaïche  <vincentb1@users.sourceforge.net>